--- a/list/app/views/tasks/index.html.erb
+++ b/list/app/views/tasks/index.html.erb
@@ -4,6 +4,10 @@
   <% @tasks.each do |task| %>
     <li>
       <%= link_to task.body, task %>
+      <%= link_to "Edit", edit_task_path(task) %>
+      <%= link_to "Delete", task_path(task),
+                    method: :delete,
+                    data: { confirm: "Are you sure?" } %>
     </li>
   <% end %>
 </ol>
