added new app that integrates React with Rails as API

--- a/list/app/views/tasks/index.html.erb
+++ b/list/app/views/tasks/index.html.erb
@@ -1,5 +1,5 @@
 <h1>To-Do List</h1>
-
+<%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
 <ol>
   <% @tasks.each do |task| %>
     <li>
