updated search function to show all results from all selected tags instead of only one selected tag. also updated search function in controller to remove duplicates

--- a/NewApp/my_list/app/assets/stylesheets/application.css
+++ b/NewApp/my_list/app/assets/stylesheets/application.css
@@ -27,26 +27,23 @@
     color: #293241;
   }
   .custom-button.btn {
-    background-color: #293241;
+    background-color: #004214;
     color: #FFF;
     border: none;
+    margin: 2px;
   }
   .custom-button.btn:hover {
     color: #FFF !important;
     border: none;
   }
-  .hero {
-    width: 100vw;
-    height: 50vh;
-  }
-  .hero img {
-    object-fit: cover;
-    object-position: top;
-    height: 100%;
-    width: 100%;
-  }
   .overlay {
     height: 100%;
     width: 100%;
     opacity: 0.4;
+  }
+  .tag-button.btn {
+    background-color: #ebe044;
+    color: rgb(3, 87, 21);
+    border: none;
+    margin: 2px;
   }
