added webpack assets and bootstrap styling that works in heroku

--- a/NewApp/my_list/app/views/layouts/application.html.erb
+++ b/NewApp/my_list/app/views/layouts/application.html.erb
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- BOOTSTRAP -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"> </script>
+
     <title>MyList</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= stylesheet_pack_tag 'application', media: 'all' %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
